lessons/149-grpc-vs-rest-performance-benchmark/app/deploy/grpc/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
        - name: grpc
          image: aputra/grpc-lesson149:latest
          ports:
            - name: grpc
              containerPort: 8082
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 64Mi
              cpu: 50m
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - grpc
                      - rest
              topologyKey: "kubernetes.io/hostname"
