lessons/149-grpc-vs-rest-performance-benchmark/app/deploy/grpc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: internal-ingress-nginx
  rules:
    - host: grpc.antonputra.pvt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grpc
                port:
                  number: 443
  tls:
    - secretName: grpc-antonputra-pvt
      hosts:
        - grpc.antonputra.pvt
